Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65962

[REG: 5.9.3->5.9.4] ComboBox popup doesn't show up

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.5
    • 5.9.4
    • Quick: Controls 2
    • None
    • c3858bd53974e486e03537d1937deb0020828556

      Deferred execution of ComboBox::popup is broken. In Qt 3D Studio, popups don't appear at all when any combobox is clicked. The source code for Qt 3D Studio's customized ComboBox: http://code.qt.io/cgit/qt3dstudio/qt3dstudio.git/tree/src/Authoring/Studio/Palettes/controls/StyledComboBox.qml

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes